# incontext_rl_mjlab

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.devcontainer/docker/: Dockerfile  env_setup.sh
mjlab_cfgs/assets/zoo/robots/point_mass/: point_mass_constants.py
mjlab_cfgs/assets/zoo/robots/point_mass/xmls/: point_mass.xml
mjlab_cfgs/tasks/point_mass/: __init__.py  env_cfg.py  rl_cfg.py
src/Incontext_rl/: mj_test.py
