[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mjlab-icrl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "mujoco>=3.2.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24",
    "einops",
    "clearml",
    "tensorboard",
    "mjlab"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]